--- a/coordinates/style.css
+++ b/coordinates/style.css
@@ -16,19 +16,19 @@ body {
 .horizontal-line {
   width: 100%;
   height: 3px;
-  top: 50%;
+  /* top: 50%; */
 }
 
 .vertical-line {
   height: 100%;
   width: 3px;
-  left: 50%;
+  /* left: 50%; */
 }
 
 .target {
   position: absolute;
-  top: 50%;
-  left: 50%;
+  /* top: 50%; */
+  /* left: 50%; */
   /* 이미지 좌표가 중심으로 보이지않아서, 
   이미지의 크기의 50%씩수평, 수직 축으로 이동하여 조절 */
   transform: translate(-50%, -50%);
@@ -37,8 +37,9 @@ body {
 .coordinates_value {
   color: white;
   position: absolute;
-  top: 52%;
-  left: 52%;
+  /* top: 52%; */
+  /* left: 52%; */
   font-size: 28px;
+  margin: 20px;
   font-weight: 600;
 }
