--- a/shoppinList/style.css
+++ b/shoppinList/style.css
@@ -3,31 +3,57 @@
   padding: 0px;
 }
 
-body {
-  background-color: grey;
-  display: flexbox;
+.main-container {
+  display: flex;
+  /* margin: 0 auto; */
+  align-items: center;
   justify-content: center;
+  width: 100vh;
+  height: 100vh;
 }
 
 .container {
-  width: 500px;
-  height: 1000px;
-  background-color: aqua;
+  width: 400px;
+  height: 600px;
+  border: 1px solid grey;
+  border-radius: 3px;
+}
+
+header {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-top-right-radius: 3px;
+  height: 13%;
+  width: 100%;
+  background-color: pink;
+}
+footer {
+  border-bottom-right-radius: 3px;
+  height: 17%;
+  width: 100%;
+  background-color: pink;
 }
 
 .item-list {
-  background-color: blanchedalmond;
-  /* width: 100%; */
-  /* height: 65%; */
-  background-color: aqua;
+  background-color: whitesmoke;
+  width: 100%;
+  height: 63%;
+}
+.item {
+  background-color: white;
+
+  height: 7%;
+  padding: 10px 20px;
+  border-bottom: 1px solid rgb(184, 180, 180);
 }
 
-.header {
-  /* height: 10%; */
-  color: palevioletred;
+input {
+  width: 100%;
+  border-style: none;
+  height: 7%;
 }
 
-.footer {
-  height: 15%;
-  color: palevioletred;
+li {
+  list-style-type: none;
 }
