Update : CSS 세부 추가

--- a/shoppinList/style.css
+++ b/shoppinList/style.css
@@ -4,6 +4,17 @@
   padding: 0px;
 }
 
+button {
+  outline: none;
+  border: none;
+  cursor: pointer;
+  transition: all 300ms ease-in;
+}
+
+button:hover {
+  color: blueviolet;
+}
+
 .main-container {
   display: flex;
   align-items: center;
@@ -16,7 +27,6 @@
 .container {
   width: 400px;
   height: 600px;
-
   border-radius: 10px;
 }
 
@@ -48,24 +58,33 @@ header {
 .item {
   display: flex;
   align-items: center;
-  background-color: white;
+  justify-content: space-between;
+  /* background-color: white; */
   height: 10%;
   font-size: 20px;
   padding: 10px 20px;
-  border-bottom: 1px solid rgb(184, 180, 180);
+  /* border-bottom: 1px solid rgb(184, 180, 180); */
   list-style-type: none;
 }
 
-.item > span {
-  margin: 10px;
+.item-divider {
+  width: 90%;
+  height: 1px;
+  background-color: lightgrey;
+  margin: auto;
 }
+
+.item-delete {
+  font-size: 20px;
+}
+/* .item-delete:hover { */
+/* color: blueviolet; */
+/* } */
 
 footer {
   display: flex;
-  border-bottom-right-radius: 3px;
   height: 17%;
   width: 100%;
-  background-color: pink;
   justify-content: center;
   align-items: center;
   background: rgb(66, 167, 255);
@@ -80,16 +99,13 @@ footer {
 input {
   width: 100%;
   border-style: none;
+  outline: none;
   height: 7%;
+  padding: 0 16px;
 }
 
-.fa-plus-square {
-  color: white;
+.item-add {
   font-size: 50px;
-}
-
-input {
-  width: 100%;
-  border-style: none;
-  height: 7%;
+  background-color: transparent;
+  color: white;
 }
